Fix gap on right

--- a/src/components/FirstPart/components/Intro/styles.css
+++ b/src/components/FirstPart/components/Intro/styles.css
@@ -2,7 +2,7 @@
     display:flex;
     align-items:center;
     flex-direction: row;
-    gap:100px;
+    gap:50px;
     width: 80%;
     height: 700px;
     background-color: white;
