--- a/src/components/SecondPart/components/styles.css
+++ b/src/components/SecondPart/components/styles.css
@@ -1,11 +1,11 @@
 .carousel{
-    width: 100%;
+    width: 95%;
     display: block;
     justify-content: center;
 }
 
 .carousel-card{
-    width: 400px;
+    width: 350px;
     height:300px;
     background: white;
 }
